--- a/Fintrack/wwwroot/index.html
+++ b/Fintrack/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="Fintrack.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </head>
 
 <body>
